# grng

./: .gitignore  README.md  __init__.py  pyproject.toml  test.py  test2.py
src/extract/: bits.py  von_neumann.py
src/grng/: cli.py  collect.py  collect_post.py  collect_stats.py  collect_stream.py  collect_summarize_stats.py  collect_validate.py  collect_visualize.py  pipeline.py  visualize_live.py
src/grng/constants/: audio.py
src/grng/extract/: __init__.py  bits.py  von_neumann.py
src/grng/post/: bitmap.py  distill.py
src/grng/sources/: __init__.py  base.py  microphone.py
src/grng/standardize/: __init__.py  audio.py  base.py
src/grng/validate/: __init__.py  audio.py  base.py
src/grng/visualize/: base.py  hilbert.py  monte_carlo.py  random_walk.py  scatter.py
src/standardize/: audio.py
