[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grng"
version = "0.1.0"
description = "CLI for generating randomn numbers from various entropy sources"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyaudio",
    "bitarray",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "matplotlib"
]

[project.scripts]
grng = "grng.cli:main"
grng-collect = "grng.collect:main"

[tool.setuptools.packages.find]
where = ["src"]
