[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grng"
version = "0.1.0"
description = "CLI for generating randomn numbers from various entropy sources"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyaudio",
    "bitarray",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "matplotlib"
]

[project.scripts]
grng = "grng.cli:main"
grng-collect = "grng.collect:main"
grng-collect-validate = "grng.collect_validate:main"
grng-collect-post = "grng.collect_post:main"
grng-collect-visualize = "grng.collect_visualize:main"
grng-visualize = "grng.visualize_live:main"
grng-collect-summarize-stats = "grng.collect_summarize_stats:main"
grng-collect-stream = "grng.collect_stream:main"

[tool.setuptools.packages.find]
where = ["src"]
